# newfinance

./: .env.local  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  supabase_rls_fix.sql  test_api.py
.ipynb_checkpoints/: model_api-checkpoint.py
apps/web/: .gitignore  next.config.ts  package.json
apps/web/public/model/: financeai_cat_maps.json  financeai_threshold.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/api/gpt/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/score/: predict.py  route.ts
apps/web/src/app/api/transactions/: route.ts
apps/web/src/app/components/: csv-preview.tsx  csv-upload.tsx  footer.tsx  navbar.tsx
apps/web/src/app/test-encryption/: page.tsx
apps/web/src/app/test-security/: page.tsx
apps/web/src/lib/: encryption-wasm.ts  encryption.ts  insight.ts  monitoring.ts  parseCsv.ts  rate-limiter.ts  supabase.ts
apps/web/src/lib/wasm/: Cargo.toml  build.sh  test-wasm.js
apps/web/src/lib/wasm/src/: lib.rs
financeai-ml/: train_isolation_forest.ipynb
financeai-ml/.ipynb_checkpoints/: train_isolation_forest-checkpoint.ipynb
services/: globals.css
services/ml-api/: Dockerfile  main.py  model_api.py  requirements-simple.txt  requirements.txt
